--- a/java-score/build.gradle
+++ b/java-score/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
 
     testImplementation 'org.web3j:crypto:5.0.0'
+    testImplementation 'foundation.icon:icon-sdk:2.5.0'
 }
 
 optimizedJar {
