--- a/java-score/build.gradle
+++ b/java-score/build.gradle
@@ -1,17 +1,17 @@
 version = '0.9.0'
 
 dependencies {
-    compileOnly 'foundation.icon:javaee-api:0.9.5'
+    compileOnly 'foundation.icon:javaee-api:0.9.6'
     implementation 'foundation.icon:javaee-scorex:0.5.4.1'
     implementation 'com.github.sink772:minimal-json:0.9.7'
 
-    testImplementation 'foundation.icon:javaee-unittest:0.12.0'
-    testImplementation 'org.mockito:mockito-core:4.11.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
+    testImplementation 'foundation.icon:javaee-unittest:0.12.2'
+    testImplementation 'org.mockito:mockito-core:5.13.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.3'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.3'
 
     testImplementation 'org.web3j:crypto:5.0.0'
-    testImplementation 'foundation.icon:icon-sdk:2.5.0'
+    testImplementation 'foundation.icon:icon-sdk:2.5.1'
 }
 
 optimizedJar {
@@ -32,8 +32,8 @@ deployJar {
             nid = 0x3
         }
     }
-    keystore = rootProject.hasProperty('keystoreName') ? "$keystoreName" : ''
-    password = rootProject.hasProperty('keystorePass') ? "$keystorePass" : ''
+    keystore = rootProject.hasProperty('keystoreName') ? "$keystoreName" : 'keystore.json'
+    password = rootProject.hasProperty('keystorePass') ? "$keystorePass" : 'gochain'
     parameters {
     }
 }
