--- a/java-score/build.gradle
+++ b/java-score/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 }
 
 optimizedJar {
+    dependsOn(project(':utils').jar)
     mainClassName = 'com.iconloop.score.pds.PdsPolicy'
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
